1.8.20
------
(RB=154752)
Fix bug where shutdown of HttpClientFactory will fail if the final
event leading to shutdown occurs on a Netty IO thread.

(RB=159386)
Support typerefs in association keys for batch responses.

1.8.19
------
(RB=158603)
Fix bug that context path is missing in docgen "View in JSON format" link.

(RB=154315)
Add SSL support in D2 client.

1.8.18
------
(RB=157884)
Fix NPE in Data Template generator when an array item or map value type is a typeref'ed union.

(RB=157128)
Fix queryParamsDataMap not able to convert single element query to StringArray

1.8.17
------
(RB=157735)
fix default and master service bugs in D2ConfigCmdline

1.8.16
-------
(RB=154319)
Allow repeat registration of a coercer *only* if the coercer is the same class as already registered.

(RB=154979)
add ability to exclude individual services from colo variants in d2-config-cmdline

1.8.15
------
(RB=154062)
moved transportClient, degrader and many other cluster properties to service properties (part 2)

(RB=153714)
make sure that a marked down server is not marked up by ZookeeperConnectionManager when the zookeeper connection is expired

(RB=153778)
Add "View in JSON format" link to all docgen pages in the navigation header.

1.8.14
-------
(RB=147678)
Improve client side logging of RestLiServiceException

(RB=152564)
Fix race condition between ZKConnection.start() and DefaultWatcher.process() by waiting for initialization completion
This replaces RB 149393

1.8.13
-------
(RB=152377)
Reapply "moved transportClient, degrader and many other cluster properties to service properties (part 1)"
Push the config producing code first then push the config consuming part later.

(RB=151543)
minimize the amount of logging that D2 makes when there is no state changes

1.8.12
------
Reverted "moved transportClient, degrader and many other cluster properties to service properties (part 1)"

(RB=151817)
Update RestLiConfig to allow RestLiServer to load specific resource classes.
